--- a/Tudo/codigo/index.html
+++ b/Tudo/codigo/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="#">
 </head>
 <body>
-    <div class="container">
+    <div>
         <label>svsvsvsvs</label>
     </div>
     
